fix: mobile collapsed navbar breadcrumb text

--- a/src/components/Breadcrumb/index.css
+++ b/src/components/Breadcrumb/index.css
@@ -9,7 +9,7 @@
   width: 78px;
   min-height: 80px;
 
-  padding: var(--size-sm) 0;
+  padding: var(--size-xs) 2px;
 
   font-family: var(--font-family);
   font-size: var(--size-sm);
